# thumper

./: .gitignore  CHANGELOG.md  LICENSE-MIT  README.md  pyproject.toml
api-anything/: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TEST.md
api-anything/docs/: multi-platform-hardening.md  native-bun-execution-layer-v2.md  native-bun-runner.md
api-anything/scripts/: demo.sh
api-anything/src/: main.rs
api-anything/src/acp/: server.rs
api-anything/src/bun/: discovery.rs  execution.rs  harness.rs  mod.rs  native.rs  parent.rs
api-anything/src/cli/: bun.rs  definition.rs  generate.rs  mod.rs  output.rs  registry.rs
api-anything/src/demo/: mod.rs
api-anything/src/generator/: mod.rs  native.rs  python_bridge.rs
api-anything/src/registry/: mod.rs  model.rs  store.rs
api-anything/src/tui/: app.rs  handlers.rs  job.rs  mod.rs  startup.rs  state.rs
api-anything/src/tui/widgets/: error_card.rs  mod.rs  plasma_bar.rs  views.rs
api-anything/tests/e2e/: harness.rs  main.rs
cli_anything_bun/: README.md  __init__.py  __main__.py  cli.py  events.py  package.py  process.py  script.py
tests/: test_events.py  test_operations.py  test_package.py  test_process.py
thump/: .gitignore  README.md  __init__.py  __main__.py  cli.py  events.py  operations.py  package.py  process.py  script.py
thumper/: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md
thumper/docs/: multi-platform-hardening.md
thumper/responder-api/: responder_api.py
thumper/src/: lib.rs  main.rs
thumper/src/acp/: mod.rs  server.rs
thumper/src/bun/: cache.rs  dag.rs  discovery.rs  events.rs  execution.rs  harness.rs  mod.rs  native.rs  pool.rs  recovery.rs
thumper/src/cli/: bun.rs  definition.rs  introspect.rs  mod.rs
thumper/src/generator/: native.rs  python_bridge.rs
thumper/src/ledger/: chain.rs  journal.rs  mod.rs
thumper/src/registry/: keys.rs  mod.rs  sqlite.rs  store.rs
thumper/src/tui/: app.rs  handlers.rs  job.rs  mod.rs  state.rs  styles.rs
thumper/src/tui/widgets/: error_card.rs  views.rs
thumper/tests/: conformance.rs  heal_journal.rs  run_journal.rs
thumper/tests/conformance/: basic-intact.jsonl  conformance.json  hmac-intact.jsonl  tampered-content.jsonl  tampered-deletion.jsonl
thumper/tests/e2e/: harness.rs
