[package]
name = "thumper-cli"
version = "0.2.0"
edition = "2021"
authors = ["Thumper Contributors"]
description = "Thumper — the high-performance local execution & recovery substrate for the Korgex agent runtime (native Bun runner, self-healing, ratatui TUI)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/New1Direction/thumper"
homepage = "https://github.com/New1Direction/thumper"
readme = "README.md"
keywords = ["korgex", "agent", "execution", "sandbox", "tui"]
categories = ["development-tools"]

[features]
default = ["cli", "tui"]
cli = []
tui = ["ratatui", "crossterm", "futures", "nucleo-matcher"]
acp = ["agent-client-protocol", "agent-client-protocol-tokio", "tokio-util"]
python-bridge = []

[dependencies]
# Core (always for CLI/headless)
clap = { version = "4.6", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "6.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
which = "7.0"
shellexpand = "3.1"
regex = "1.0"

# Async (needed even for basic streaming/bridge)
tokio = { version = "1.44", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
hmac = "0.12"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
hex = "0.4"



# TUI (feature = "tui")
ratatui = { version = "0.30", features = ["crossterm"], optional = true }
crossterm = { version = "0.28", features = ["event-stream"], optional = true }
futures = { version = "0.3", optional = true }
nucleo-matcher = { version = "0.3", optional = true }

# ACP (feature = "acp")
agent-client-protocol = { version = "0.11", features = ["unstable_session_usage"], optional = true }
agent-client-protocol-tokio = { version = "0.11", optional = true }
tokio-util = { version = "0.7", features = ["compat"], optional = true }

# Platform-specific process ancestry (used for native Bun preference detection)
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Threading"] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[dev-dependencies]
serial_test = "3.2"
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.0"

[lib]
name = "thumper_cli"
path = "src/lib.rs"

[[bin]]
name = "thump"
path = "src/main.rs"
